[package]
name = "ether-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
ether = { path = "../ether" }
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros"] }
loading = "*"
